# sdl-renderer

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
examples/: example.cpp
include/: components.h  constants.h  entityManager.h  playerSystem.h  positionRegistry.h  render.h  renderer.h  systems.h  utils.h  vmath.h  window.h
src/: entityManager.cpp  main.cpp  playerSystem.cpp  render.cpp  renderer.cpp  systems.cpp  utils.cpp  window.cpp
